--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         <p>
           📧 <a href="mailto:rbose2002@gmail.com">rbose2002@gmail.com</a>
           &nbsp;&nbsp;|&nbsp;&nbsp;
-          📞 <a href="tel:+918100457400">+91&nbsp;8100457400</a>
+          📞 <a href="tel:+91-8792870926">+91-&nbsp;8792870926</a>
         </p>
       </div>
     </section>
