--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Backend & Systems Engineer</title>
+  <title>Rohitangshu Bose Portfolio</title>
   <style>
     :root {
       --bg: #f7f8fa;
@@ -384,27 +384,38 @@
     </section>
 
     <section id="about" class="reveal" style="text-align:center">
-      <h2>About Me</h2>
-      <p style="margin-left:auto;margin-right:auto">
-        I focus on <strong>backend</strong> and <strong>systems engineering</strong>, working on problems where
-        <strong>correctness</strong>, <strong>consistency</strong>, and <strong>fault-tolerance</strong> are first-class concerns.
-        I’m most comfortable building close to the <strong>operating system</strong> and the <strong>network</strong>,
-        and I care deeply about how systems behave under <strong>concurrency</strong>, <strong>crashes</strong>, and
-        <strong>partial failure</strong>.
-      </p>
-      <p style="margin-left:auto;margin-right:auto">
-        My work spans <strong>systems programming</strong> and <strong>backend development</strong>. I like implementing
-        components <strong>from scratch</strong>—Unix utilities, <strong>concurrent servers</strong>, and
-        <strong>storage layers</strong>—to understand <strong>design trade-offs</strong> and <strong>failure modes</strong>
-        instead of treating libraries as black boxes.
-      </p>
-      <p style="margin-left:auto;margin-right:auto">
-        Areas I go deep on include <strong>POSIX systems programming</strong>, <strong>write-ahead logging</strong>,
-        <strong>LSM-tree storage engines</strong>, and <strong>consensus protocols</strong> like <strong>Raft</strong>.
-        I’m looking for <strong>backend</strong>, <strong>platform</strong>, or <strong>infrastructure</strong> roles where
-        <strong>reliability</strong> and <strong>recovery</strong> matter.
-      </p>
-    </section>
+  <h2>About Me</h2>
+
+  <p style="margin-left:auto;margin-right:auto">
+    <strong>Backend</strong> and <strong>systems engineer</strong> focused on building
+    <strong>reliable</strong>, <strong>fault-tolerant</strong> infrastructure where
+    <strong>correctness</strong> and <strong>consistency</strong> are first-class concerns.
+    Work centers on low-level systems close to the <strong>operating system</strong>,
+    <strong>network</strong>, and <strong>storage</strong> layers, with particular attention
+    to behavior under <strong>concurrency</strong>, <strong>crashes</strong>, and
+    <strong>partial failure</strong>.
+  </p>
+
+  <p style="margin-left:auto;margin-right:auto">
+    Experience spans <strong>systems programming</strong> and
+    <strong>backend development</strong>, with a strong emphasis on understanding systems
+    <strong>from first principles</strong>. Hands-on work includes building
+    <strong>concurrent servers</strong>, Redis-like and Raft-based
+    <strong>key-value stores</strong>, and <strong>write-optimized storage engines</strong>
+    to explore real-world <strong>trade-offs</strong> in durability, consistency, and
+    performance rather than relying on opaque abstractions.
+  </p>
+
+  <p style="margin-left:auto;margin-right:auto">
+    Primary areas of depth include <strong>POSIX systems programming</strong>,
+    <strong>write-ahead logging</strong>, <strong>LSM-tree storage engines</strong>, and
+    <strong>distributed consensus</strong> protocols such as <strong>Raft</strong>.
+    Actively seeking <strong>backend</strong>, <strong>platform</strong>, or
+    <strong>infrastructure</strong> roles where <strong>reliability</strong>,
+    <strong>recovery</strong>, and <strong>failure-aware design</strong> are core requirements.
+  </p>
+</section>
+
 
     <section id="skills" class="reveal">
       <h2 style="text-align:center">Skills</h2>
